examples/exploit-example/klee-out-0/test000001.exec.err
Error: invalid function pointer
Stack: 
	#000000671 in __user_main (argc=1, argv=79655296)
	#100000388 in __uClibc_main (main=103424776, argc=1, argv=79655296, app_init=0, app_fini=0, rtld_fini=0, stack_end=0) at libc/misc/internals/__uClibc_main.c:401
	#200000563 in main (=1, =79655296)
